--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,23 @@ test {
 }
 
 dependencies {
-
     //lombok
-    compileOnly 'org.projectlombok:lombok:1.18.22'
-    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
     // StopWatch
     implementation('org.apache.commons:commons-lang3:3.0')
+
+    //webclient dependencies
+    implementation 'org.springframework:spring-webflux:5.2.9.RELEASE'
+    implementation 'io.projectreactor.netty:reactor-netty:0.9.12.RELEASE'
+
+    //jackson dependencies
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.11.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.1'
 
     //junit5-dependencies
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.1')
